data/CATCH_ISSUES
:Reason: Filesize does not match recorded size
Couldn't download .* Aborting.
Fetch failed for
undefined reference to .yy
This ebuild will need the
This package will need access to .* cds.
These fortunes have offensive content. Enable offensive USE Flag
This plugin requires the X frontend of gkrellm.
/bin/sh: bad interpreter: Permission denied
ACCESS VIOLATION SUMMARY
Can't read
CMake will not be able to correctly generate this project.
class file .* not found
error: redefinition of
has incomplete type
: undefined reference to
undefined symbol:
exited with code: 1.
I can't find the format file
; recompile with -fPIC
Fatal error:
multiple definition of
must be installed to use
Non type-variable argument
too few arguments to function
: redefining predefined macro
Error 137
Line indented less than expected
#   Failed test
FAILED .*test
Failed tests:
Parse error .
object has no attribute
.*.texinfo:.*: unknown command
reference to Parameter is ambiguous
Unknown M68KMAKE directive
USE Flag .* not in IUSE
was not declared in this scope
You need package
error: .* has not been declared
FAILED: test
ninja: build stopped:
: undefined method
Please specify at least one package name on the command line.
make inconsistent assumptions over
ERROR: you will need
file was not found
Could not find a package configuration file provided by
Cannot specify link libraries for target .* which is not built
.* library not found, but required for .* module.
Configuring incomplete, errors occurred
Unknown CMake command
include called with wrong number of arguments
Fetched file: .* VERIFY FAILED!
: fatal error: .*
internal error in relocate
Failure:
: error:
Could not find Objective-C runtime
  A duplicate ELSE command was found inside an IF block.
Failed to load interface for
ImportError:
The .* distribution was not found and is required by
stack smashing detected
ld: cannot find
Errors in .* projects
No rule to make target
CSC: error .*:
final link failed: Nonrepresentable section on output
ld returned 1 exit status
Error: No implementations provided for the following modules:
LoadError
cannot find symbol
incompatible types
bad class file:
Compile failed; see the compiler error
Failed Patch:
can't get .* relocation type
Not in scope:
The Motif libraries are not installed.
No instance for (
setup: At least the following dependencies are missing:
texi2info failed
error in setup command
Could not find Objective-C
Requires at least PyQ.*
You have to install development tools first.
is not a function name
mkdir: cannot create directory
Unable to find program
required internal CMake variable not set
javac: invalid source release
Unknown channel
bad option
Assertion .* failed
Failed to find
dereferencing pointer to
Error getting
cmake failed
ImportError:
Error on line
chown: invalid user
is not on the classpath.
Failed Running automake
error while loading shared libraries
PYTHON needs to be set for
Add .* to DEPEND
Cannot find \$EPATCH_SOURCE!
Failed Running autoconf
mv: cannot stat
No CommonLisp implementation found
Could not link test program to Python
cannot find package
Failed Running aclocal
is banned in EAPI=
exceeds the 32 bit address space
make:.* Stop.
error adding symbols:
missing separator
^FAIL:
pdflatex failed
An exception has occurred in the compiler
error in .* command
Can't locate Locale/Messages.pm in @INC
Ebuild author forgot an entry
Please install required programs:
error: expected expression before
 error: narrowing conversion of
 error: implicit declaration of
.* command not found
mmap: wanted .* bytes at .*, actually mapped at .*
pushd.*No such file or directory
Invalid use of .*.eclass
Unable to set SELinux security labels
patch .* failed with
you need to fix the relative paths in patch
csc: invalid option
make.*: No such file or directory.  Stop.
Unknown module(s) in QT
LaTeX Error:
Error producing PDF from TeX source
Error .*GCING.* in
Warning as Error:
pdfetex exited with bad status
SyntaxError: invalid syntax
AppArmor parser error for
/usr/bin/install: will not overwrite just-created
gettext infrastructure mismatch
missing binary operator before token
are incompatible when linking
EPYTHON unset
POD document had syntax errors
No supported Python implementation
must be called in src_prepare
One of the following USE flags is needed:
python_pkg_setup() not called
Ambiguous occurrence
Missing USE flags in
Compilation failed in require at
is banned in EAPI
Failed Running libtoolize
Select exactly one database type out of these: mysql oracle postgres sqlite
failed to load "
Type of arg .* to shift must be array
java.lang.NoSuchMethodError:
Failed .* test programs. .* subtests failed.
Unable to find version .* of package
The source directory .* doesn.t exist
Document .* does not validate
not enough memory for initialization
dblatex or fop must be installed to use
No Python implementation set
install: cannot stat .*: No such file or directory
could not be found, but is required.
The library 'System.Xml.dll' could not be found.
mktextfm:.*failed to make
Failed Running autopoint
tar: This does not look like a tar archive
/bin/sh: .* No such file or directory
requires support for 32-bit executables.
Failed setting classpath from Ant task
Option .* requires an argument
error: .* undeclared
parser error : .* not defined
make: invalid option
Uncaught error in
^Error:
: Error:
recipe for target .* failed
backend requires .* - aborting
: FAILED:
convert: no
syntax error
record .* undefined
E: Failure
terminated with error code
setup.py:.*: UserWarning: .* must be installed to build
no configure script found
Function .* not defined
rake aborted!
extra arguments no longer supported; please file a bug
Buildfile: .* does not exist!
E: Cannot find external tool
pushd: too many arguments
are banned in EAPI
PostgreSQL slot must be set to one of:
gmcs: No such file or directory
eapply: no files specified
python_export called without a python implementation and EPYTHON is unset
Discovering .* failed
make: .*: Command not found
Package .* not found
 \(Failed\)
 \(OTHER_FAULT\)
Errors while running
 Failed .* subtests
Failed test
\.\.\. FAILED
Not supported in your configuration: ocamlopt
: Analysis failed with error:
Failed .* tests, .*% okay, .* tests skipped.
error: expected
testsuite: .* failed
sudo: no tty present and no askpass program specified
env.*No such file or directory
error: .
make: .*: Command not found
.* tests executed, .* failures
 Segmentation fault
ERROR: test(s) failed in
sh: .* No such file or directory
/bin/sh: .* Not a directory
Could NOT find .* (missing: .*)
  configure failed
 \* .* is not a valid file/directory
newinitd:.* does not exist
 !!! .* does not exist
 \(RuntimeError\)
You do not have the SDL/SDL_rotozoom.h headers installed. Exiting.
 API requires the .* utility to be installed
 : No such file or directory - git (Errno::.*)
   unbound variable:
fatal: Not a git repository (or any parent up to mount point /var/tmp)
rm: cannot remove 'libsrtp.a': No such file or directory
 Performing Test .* - Failed
OTP release .* does not match required regex
Test ".*" from suite ".*" failed.
Can't open heap image file
 \*   PostgreSQL slot is not set to .* or higher.
\\[ERROR\\]
 \*   \(no error message\)
Makefile.* Terminated
Error .
Files matching a file type that is not allowed:
Test suite test-threads: FAIL
